test/negative/706_deref_nonref.err
706_deref_nonref.fx:3:10: error: incorrect type of value 'x': expected='<unknown> ref', actual='int'

1 errors occured during type checking.
